[package]
name = "rvoip-audio-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "Comprehensive audio handling for VoIP applications with device management and format conversion"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true

[dependencies]
# 🎯 INTERNAL CRATES - Use workspace dependencies (no version needed!)
rvoip-session-core.workspace = true
rvoip-rtp-core.workspace = true
rvoip-client-core = { workspace = true, optional = true }

# Audio device access
cpal = { version = "0.15", optional = true }

# Audio processing and format conversion - NOT USED (no imports found)
# samplerate = { version = "0.2", optional = true }
# rubato = { version = "0.15", optional = true }
# dasp = { version = "0.11", features = ["signal"], optional = true }

# For audio file decoding in tests - NOT USED
# symphonia = { version = "0.5", features = ["mp3", "wav"], optional = true }


# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
# async-trait = "0.1"  # NOT USED
# futures = "0.3"      # NOT USED

# Data structures and utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
# bytes = "1.0"        # NOT USED
# dashmap = "5.5"      # NOT USED
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"   # NOT USED
# parking_lot = "0.12" # NOT USED

# Logging and error handling
# tracing = "0.1"      # NOT USED
# anyhow = "1.0"       # NOT USED
thiserror = "1.0"

# Time and synchronization
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3.1"

[features]
default = ["format-conversion", "device-cpal"]

# Device backend features
device-cpal = ["cpal"]
device-mock = []

# Format conversion feature (placeholder - dependencies removed as not actually used)
format-conversion = []
# format-advanced = ["format-conversion", "dasp"]

# Client integration features
client-integration = ["rvoip-client-core"]

# Audio processing features (future)
processing-aec = []
processing-agc = []
processing-noise = []
processing-vad = []
processing-all = ["processing-aec", "processing-agc", "processing-noise", "processing-vad"]

# All features
full = ["processing-all"]

# Example configurations
# Examples will be implemented in future phases 