[package]
name = "rvoip-auth-core"
version = "0.1.0"
edition = "2021"
authors = ["RVoIP Contributors"]
description = "OAuth2 and token-based authentication for RVoIP services"
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# SIP Digest authentication
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
