[package]
name = "rvoip-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tool for managing the rvoip call center platform"

[lints]
workspace = true

[[bin]]
name = "rvoip"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tabled = "0.17"
colored = "3"
dirs = "6"
toml = "0.8"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
