[package]
name = "rvoip-client-core"
version = "0.1.2"
edition = "2021"
description = "SIP client coordination layer - leverages rvoip infrastructure for client applications"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rvoip-client-core"
homepage = "https://github.com/eisenzopf/rvoip"
repository = "https://github.com/eisenzopf/rvoip"
keywords = ["sip", "voip", "client", "telecommunications", "rtp"]
categories = ["network-programming", "multimedia"]

# Silence all Rust warnings and configure clippy
[lints.rust]
warnings = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_comparisons = "allow"
elided_named_lifetimes = "allow"
ambiguous_glob_reexports = "allow"
deprecated = "allow"
unexpected_cfgs = "allow"
unreachable_patterns = "allow"
irrefutable_let_patterns = "allow"
unused_assignments = "allow"
async_fn_in_trait = "allow"

[lints.clippy]
# Allow stylistic and pedantic lints that don't affect correctness
pedantic = "allow"
style = "allow"
complexity = "allow"
perf = "allow"
cargo = "allow"
nursery = "allow"

# Keep important correctness lints as warnings/errors
correctness = "warn"
suspicious = "warn"
restriction = "allow"

# Allow specific common patterns that are acceptable
len_zero = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
redundant_pattern_matching = "allow"
needless_option_as_deref = "allow"
unnecessary_filter_map = "allow"
bool_assert_comparison = "allow"
bool_comparison = "allow"
comparison_to_empty = "allow"
explicit_auto_deref = "allow"
unnecessary_get_then_check = "allow"
needless_borrows_for_generic_args = "allow"
assertions_on_constants = "allow"
expect_fun_call = "allow"
option_as_ref_deref = "allow"
useless_conversion = "allow"
unnecessary_literal_unwrap = "allow"
vec_init_then_push = "allow"
useless_vec = "allow"
redundant_closure = "allow"
items_after_test_module = "allow"
approx_constant = "allow"
partialeq_to_none = "allow"
legacy_numeric_constants = "allow"
absurd_extreme_comparisons = "allow"
cast_abs_to_unsigned = "allow"
empty_line_after_doc_comments = "allow"
multiple_bound_locations = "allow"
should_implement_trait = "allow"
manual_find = "allow"
collapsible_else_if = "allow"

[dependencies]
rvoip-session-core = { path = "../session-core", version = "0.1.2" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures and utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking and time
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Random number generation for jitter
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3.1"

[features]
default = []
# Enable audio device integration (future)
audio-devices = []
# Enable video support (future)  
video = []
# Enable advanced codecs (future)
advanced-codecs = []

# Example configurations
[[example]]
name = "sipp_integration_sip_test_server"
path = "examples/sipp_integration/sip_test_server.rs" 