[package]
name = "rvoip-client-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "High-level VoIP client library for the rvoip stack"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true
[dependencies]
rvoip-session-core = { path = "../session-core", version = "0.1.4" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures and utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

# Networking and time
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Random number generation for jitter
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3.1"

[features]
default = []
# Enable video support (future)  
video = []
# Enable advanced codecs (future)
advanced-codecs = []

# Example configurations
[[example]]
name = "sipp_integration_sip_test_server"
path = "examples/sipp_integration/sip_test_server.rs" 