[package]
name = "codec-core"
version = "0.1.0"
edition = "2021"
authors = ["RVoIP Contributors"]
description = "Audio codec implementations for RVoIP"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rvoip"

[lib]
name = "codec_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Core dependencies
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"

# Performance optimizations
once_cell = "1.19"           # Lazy static initialization for lookup tables
bytemuck = "1.0"             # Safe transmutation between types
rayon = "1.7"                # Parallel processing

# Signal processing
rustfft = "6.1"              # Fast Fourier transforms
num-complex = "0.4"          # Complex number support
apodize = "1.0"              # Windowing functions

# Testing dependencies
[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"             # Property-based testing
rand = "0.8"                 # Random number generation for tests
temp-dir = "0.1"

# Feature flags
[features]
default = ["g711"]

# Individual codec features
g711 = []                    # Always available - no external dependencies

# Performance features
simd = []                    # SIMD optimizations
lut = []                     # Pre-computed lookup tables (enabled by default)

# All codecs
all-codecs = ["g711"]
all-sim = ["g711"]

# Benchmarking
bench = []