[package]
name = "rvoip-codec-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "G.711 Audio Codec Implementation for RVOIP"

[lib]
name = "codec_core"
path = "src/lib.rs"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true

[dependencies]
# External dependencies from workspace
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

# Crate-specific dependencies not in workspace
tracing-subscriber = "0.3"   # Logging initialization
once_cell = "1.19"           # Lazy static initialization for lookup tables

[dev-dependencies]
# Testing
tokio.workspace = true       # Async runtime for tests
temp-dir = "0.1"            # Temporary directories for WAV file tests

[features]
default = ["g711"]

# Codec features
g711 = []                    # G.711 μ-law/A-law codec (always available)