[package]
name = "rvoip-ice-core"
version = "0.1.0"
edition = "2021"
description = "ICE (Interactive Connectivity Establishment) implementation for the rvoip stack"
license = "MIT OR Apache-2.0"

# Silence all linter warnings and errors
[lints.rust]
warnings = "allow"
unused = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unreachable_code = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["net", "sync", "time", "macros"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Network and protocol dependencies
socket2 = "0.5"
byteorder = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Serialization
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Random numbers
rand = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true } 