[package]
name = "infra-common"
version = "0.1.0"
edition = "2021"
description = "Common infrastructure components for the RVOIP stack"
authors = ["Rudeless Ventures"]
repository = "https://github.com/rudeless/rvoip"
license = "MIT"

# Silence all linter warnings and errors
[lints.rust]
warnings = "allow"
unused = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unreachable_code = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"

[features]
default = []
no-global-allocator = []

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.13"

# Event system
futures = "0.3"
async-trait = "0.1"
bincode = "1.3"

# High performance dependencies
dashmap = "5.5.0"
once_cell = "1.18.0"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
chrono = "0.4"

[[bench]]
name = "api_bench"
harness = false 