[package]
name = "rvoip-infra-common"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "High-performance infrastructure and event systems for the RVOIP stack"

# ✨ INHERIT LINTS FROM WORKSPACE (no need to duplicate!)
[lints]
workspace = true

[dependencies]
# External dependencies from workspace
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
futures.workspace = true
async-trait.workspace = true
dashmap.workspace = true

# Crate-specific dependencies
config = "0.13"
once_cell = "1.18.0"
mimalloc = { version = "0.1", default-features = false }
anyhow = "1.0"
tokio-util = "0.7.16"

[dev-dependencies]
criterion.workspace = true
chrono.workspace = true

[[bench]]
name = "api_bench"
harness = false 