[package]
name = "rvoip-media-core"
version = "0.1.1"
edition = "2021"
description = "Core media handling functionality for the RVOIP project"
authors = ["RVOIP Team"]
license = "MIT OR Apache-2.0"

# Silence all Rust warnings and configure clippy
[lints.rust]
warnings = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_comparisons = "allow"
elided_named_lifetimes = "allow"
ambiguous_glob_reexports = "allow"
deprecated = "allow"
unexpected_cfgs = "allow"
unreachable_patterns = "allow"
irrefutable_let_patterns = "allow"
unused_assignments = "allow"

[lints.clippy]
# Allow stylistic and pedantic lints that don't affect correctness
pedantic = "allow"
style = "allow"
complexity = "allow"
perf = "allow"
cargo = "allow"
nursery = "allow"

# Keep important correctness lints as warnings/errors
correctness = "warn"
suspicious = "warn"
restriction = "allow"

# Allow specific common patterns that are acceptable
len_zero = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
redundant_pattern_matching = "allow"
needless_option_as_deref = "allow"
unnecessary_filter_map = "allow"
bool_assert_comparison = "allow"
bool_comparison = "allow"
comparison_to_empty = "allow"
explicit_auto_deref = "allow"
unnecessary_get_then_check = "allow"
needless_borrows_for_generic_args = "allow"
assertions_on_constants = "allow"
expect_fun_call = "allow"
option_as_ref_deref = "allow"
useless_conversion = "allow"
unnecessary_literal_unwrap = "allow"
vec_init_then_push = "allow"
useless_vec = "allow"
redundant_closure = "allow"
items_after_test_module = "allow"
approx_constant = "allow"
partialeq_to_none = "allow"
legacy_numeric_constants = "allow"
absurd_extreme_comparisons = "allow"
cast_abs_to_unsigned = "allow"
empty_line_after_doc_comments = "allow"
multiple_bound_locations = "allow"
should_implement_trait = "allow"
manual_find = "allow"
collapsible_else_if = "allow"

[dependencies]
# Use the rtp-core crate from our workspace
rvoip-rtp-core = { path = "../rtp-core" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-std = "1.0"

# Bytes handling
bytes = "1.5"

# CLI argument parsing for the demo binary
clap = { version = "4.4", features = ["derive"] }

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random generation
rand = "0.8"

# Missing dependencies needed for compilation
uuid = { version = "1.0", features = ["v4"] }
bytemuck = "1.0"
num_cpus = "1.0"
once_cell = "1.19"           # Lazy static initialization for G.711 lookup tables

# Advanced signal processing
rustfft = "6.1"
num-complex = "0.4"
apodize = "1.0"              # Windowing functions
biquad = "0.4"               # Digital filters

# Performance optimization  
rayon = "1.7"                # Parallel processing
ringbuf = "0.3"              # Lock-free ring buffers

# Media codecs (optional)
opus = { version = "0.3", optional = true }
# g729 = { version = "0.3", optional = true }  # Commented out due to missing dependency

[features]
default = ["pcmu", "pcma"]
pcmu = []
pcma = []
g722 = []
# g729 = ["dep:g729"]  # Commented out due to missing dependency
opus = ["dep:opus"]
all-codecs = ["pcmu", "pcma", "g722", "opus"]  # removed g729 due to missing dependency

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0" 