[package]
name = "rvoip-media-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "Media processing and codec support for the rvoip stack"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true
[dependencies]
# 🎯 INTERNAL CRATES - Use workspace dependencies (no version needed!)
rvoip-rtp-core.workspace = true
infra-common.workspace = true

# Codec support
rvoip-codec-core.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# State management
dashmap = "5.5"

# Async support
async-trait = "0.1"
tokio.workspace = true
anyhow.workspace = true

# Error handling
thiserror = "1.0"
async-std = "1.0"

# Bytes handling
bytes = "1.5"

# CLI argument parsing for the demo binary
clap = { version = "4.4", features = ["derive"] }

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random generation
rand = "0.8"

# Missing dependencies needed for compilation
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"           # Lazy static initialization for G.711 lookup tables
num_cpus = "1.0"             # Used for default worker thread configuration

# Advanced signal processing
rustfft = "6.1"
num-complex = "0.4"          # Used in AEC v2 implementation
apodize = "1.0"              # Used in VAD v2 for windowing functions
biquad = "0.4"               # Used in AGC v2 for digital filters

# Media codecs (optional)
opus = { version = "0.3", optional = true }
# g729 = { version = "0.3", optional = true }  # Commented out due to missing dependency

# WAV file support
hound = "3.5"

[features]
default = ["pcmu", "pcma"]
pcmu = []
pcma = []
g722 = []
# g729 = ["dep:g729"]  # Commented out due to missing dependency
opus = ["dep:opus"]
all-codecs = ["pcmu", "pcma", "g722", "opus"]  # removed g729 due to missing dependency

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["blocking"] } 