[package]
name = "rvoip-orchestration-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
description = "SIP-focused voice orchestration primitives for RVoIP"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
rvoip-infra-common = { path = "../infra-common" }
rvoip-media-core.workspace = true
rvoip-registrar-core = { path = "../registrar-core" }
rvoip-session-core = { path = "../session-core" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
libc = "0.2"

[[bench]]
name = "active_calls"
harness = false

[lints]
workspace = true
