[package]
name = "rvoip-registrar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"

# Data structures
dashmap = { workspace = true }
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Internal dependencies
rvoip-infra-common = { path = "../infra-common" }
rvoip-sip-core = { path = "../sip-core" }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
pretty_assertions = "1.4"

