[package]
name = "rvoip-rtp-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "RTP/RTCP protocol implementation for the rvoip stack"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true
[dependencies]
# Internal crates
rvoip-infra-common.workspace = true

bytes = "1.5.0"
thiserror = "1.0.56"
anyhow.workspace = true
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "sync", "net", "time", "macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
rand = "0.8.5"
async-trait = "0.1"
base64 = "0.13"
log = "0.4"
futures = "0.3.30"
hostname = "0.3"
once_cell = "1.10"
parking_lot = "0.12.1"
# Cryptographic dependencies for DTLS
hmac = "0.12.1"
sha1 = "0.10"
sha2 = "0.10.8"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10.3"
p256 = { version = "0.13.2", features = ["ecdh"] }
x509-parser = "0.15.1"
rcgen = "0.11.3"
webrtc-dtls = "0.9.0"
rsa = "0.9.6"
ring = "0.17"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
nix = { version = "0.27.1", features = ["socket"] }
libc = "0.2"
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "dtls_test"
path = "examples/dtls_test.rs"

[[example]]
name = "media_api_usage"
path = "examples/media_api_usage.rs" 