[package]
name = "rvoip-rtp-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "RTP/RTCP protocol implementation for the rvoip stack"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true
[dependencies]
# Internal crates
rvoip-infra-common.workspace = true

bytes = "1.5.0"
thiserror = { workspace = true }
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "net", "time", "macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
rand = "0.8.5"
async-trait = "0.1"
base64 = { workspace = true }
log = "0.4"
futures = "0.3.30"
hostname = "0.3"
parking_lot = "0.12.1"
# Cryptographic dependencies for DTLS
hmac = "0.12.1"
md-5 = { workspace = true }
sha1 = "0.10"
sha2 = "0.10.8"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10.3"
p256 = { version = "0.13.2", features = ["ecdh"] }
x509-parser = { version = "0.16", features = ["verify"] }
rcgen = "0.13"
rustls-pki-types = "1"
webrtc-dtls = "0.12.0"
webrtc-srtp = "0.17.1"
rsa = "0.9.6"
ring = "0.17"
# rustls and rustls-pemfile removed - were unused in rtp-core source code
serde = { version = "1.0", features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
nix = { version = "0.27.1", features = ["socket", "net"] }
libc = "0.2"
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }
time = { version = "0.3", features = ["std"] }
webrtc-sctp = "0.17.1"
webrtc-util = "0.17.1"
# webrtc-util 0.11 is needed for webrtc-dtls 0.12 Conn trait compatibility
webrtc-util-dtls = { package = "webrtc-util", version = "0.11.0", default-features = false, features = ["conn"] }
# Production-grade ICE implementation (RFC 8445)
webrtc-ice = "0.17"
# Production-grade STUN implementation (RFC 5389)
stun-rs = { version = "0.1", features = ["ice", "turn"] }
rtp = "0.17"
rtcp = "0.17"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "dtls_test"
path = "examples/dtls_test.rs"

[[example]]
name = "media_api_usage"
path = "examples/media_api_usage.rs" 
