[package]
name = "rvoip-rtp-core"
# 🎯 INHERIT VERSION AND METADATA FROM WORKSPACE!
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# Crate-specific description
description = "RTP/RTCP protocol implementation for the rvoip stack"

# ✨ INHERIT LINTS FROM WORKSPACE
[lints]
workspace = true
[dependencies]
# Internal crates
rvoip-infra-common.workspace = true

bytes = "1.5.0"
thiserror = "1.0.56"
anyhow.workspace = true
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "sync", "net", "time", "macros", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
rand = "0.8.5"
async-trait = "0.1"
base64 = "0.13"
futures = "0.3.30"
hostname = "0.3"
once_cell = "1.10"
parking_lot = "0.12.1"
# RFC 4733 §2.5.1.3 retransmit dedup keyed on (peer_addr, ssrc, ts);
# sharded for the receive hot path.
dashmap = { workspace = true }
# Lock-free atomic Arc swap used for set-once-then-read state on the
# UDP transport hot path (remote addresses, SRTP contexts).
arc-swap = "1.7"
# Lock-free MPMC queue used as the backing store for the UDP recv
# buffer pool (Phase C23c). Each recv pulls a buf, fills it via
# recv_from, then hands it to Bytes::from_owner so the downstream
# `RtpPacket::payload` is a refcounted slice with zero-copy parse.
# When all Bytes clones drop, the owner returns the Vec to the pool.
crossbeam-queue = "0.3"
# Cryptographic dependencies for DTLS
hmac = "0.12.1"
sha1 = "0.10"
sha2 = "0.10.8"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10.3"
p256 = { version = "0.13.2", features = ["ecdh"] }
x509-parser = "0.16"
rcgen = "0.14"
uuid = { version = "1.6.1", features = ["v4"] }
libc = "0.2"
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }
time = { version = "0.3.47", features = ["std"] }

[dev-dependencies]
criterion = { workspace = true }

[[example]]
name = "dtls_test"
path = "examples/dtls_test.rs"

[[example]]
name = "media_api_usage"
path = "examples/media_api_usage.rs"

# Performance benchmarks. Run with `cargo bench -p rvoip-rtp-core`. See
# `crates/rvoip-sip/docs/PROFILING.md` for the broader profiling workflow.
[[bench]]
name = "packet_parse_serialize"
harness = false

[[bench]]
name = "srtp_protect_unprotect"
harness = false

[[bench]]
name = "udp_loopback"
harness = false

[[bench]]
name = "jitter_buffer"
harness = false

[[bench]]
name = "session_demux"
harness = false
